<resources>
    <string name="app_name">盟盟</string>
    <string name="exit_app">再按一次退出盟盟</string>
    <string name="tab_name_love_to_join">爱盟盟</string>
    <string name="tab_name_red_shop">红铺</string>
    <string name="tab_name_head_newspaper">头报</string>
    <string name="tab_name_my">我的</string>
    <string name="login">登录</string>
    <string name="qq">QQ</string>
    <string name="wechat">微信</string>
    <string name="sina">新浪</string>
    <string name="wechat_friends">朋友圈</string>
    <string name="email">邮箱</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="submit">提交</string>
    <string name="agree">同意</string>
    <string name="refuse">拒绝</string>
    <string name="submit_success">提交成功</string>
    <string name="pls_login">请先登录</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="tips">提示</string>
    <string name="complete">完成</string>
    <string name="retrieve_password">找回密码</string>
    <string name="message">消息</string>
    <string name="gender">性别</string>
    <string name="phone">手机号</string>
    <string name="setting">设置</string>
    <string name="username">用户名</string>
    <string name="oldPass">旧密码</string>
    <string name="newPass">新密码</string>
    <string name="newPassTwo">确认新密码</string>
    <string name="oldPhone">旧手机</string>
    <string name="newPhone">新手机</string>
    <string name="msg">验证码</string>
    <string name="getMsg">获取验证码</string>
    <string name="getMsg_again">重新获取</string>
    <string name="phoneTips">请输入手机号</string>
    <string name="msgTips">请输入验证码</string>
    <string name="pleaseInput">请输入</string>
    <string name="photograph">拍照</string>
    <string name="albumSelect">从相册选择</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="send">发送</string>
    <string name="camera">拍照</string>
    <string name="photo">照片</string>
    <string name="video">视频</string>
    <string name="face">面议</string>
    <string name="seach">搜索感兴趣的品牌</string>
    <string name="wechat_no_tips">未检测到微信客户端</string>
    <string name="join_feedback_description">请输入反馈描述，上传照片有助于我们判断，提升投诉通过率哦！</string>
    <string name="join_feedback_type">请选择反馈问题的类型</string>
    <string name="homepage">首页</string>
    <string name="feedback">反馈</string>
    <string name="share">分享</string>
    <string name="no_net">嗨呀~没有网络链接o(┬﹏┬)o</string>
    <string name="goods_undercarriage">商品已下架o(┬﹏┬)o</string>
    <string name="url_error">错误链接o(┬﹏┬)o</string>
    <string name="new_version_update">新版本升级</string>
    <string name="mengmeng_version_updating">盟盟版本更新下载</string>
    <string name="update_content">更新内容</string>
    <string name="content_update">1.更新内容\n2.更新内容\n3.更新内容\n4.更新内容</string>
    <string name="update_immediately">马上更新</string>
    <string name="join_feedback">我要反馈</string>
    <string name="join_feedback_success">反馈成功</string>
    <string name="want_to_join">我要咨询</string>
    <string name="investment_amount">投资金额</string>
    <string name="recommend_advisory">立即咨询</string>
    <string name="hot_seach">热门搜索</string>
    <string name="seach_history">历史搜索</string>
    <string name="customer_service">客服</string>
    <string name="attention">关注</string>
    <string name="already_attention">已关注</string>
    <string name="get_join_data">获取资料</string>
    <string name="join_support">加入支持</string>
    <string name="brand_information">品牌信息</string>
    <string name="join_money">加入费用</string>
    <string name="input_money">投入费用</string>
    <string name="join_money_total">加入费</string>
    <string name="join_money_ensure">保证金</string>
    <string name="join_money_equipment">设备费用</string>
    <string name="join_money_other">其他费用</string>
    <string name="join_data_name">请输入你的姓名</string>
    <string name="join_data_sex">请选择你的性别</string>
    <string name="join_data_phone">请输入你的手机号</string>
    <string name="correct_phone">请输入正确的手机号</string>
    <string name="join_data_msg">请输入留言</string>
    <string name="brand_detail">品牌详情</string>
    <string name="brand_ownership">品牌所属</string>
    <string name="franchise_mode">加入模式</string>
    <string name="guess_you_like">猜你喜欢</string>
    <string name="attracting_investment_area">招商区域</string>
    <string name="regional_authorization">区域授权</string>
    <string name="suitable_for_crowd">适合人群</string>
    <string name="join_money_tip">以上费用为预估，具体费用请咨询企业</string>
    <string name="join_data_message" formatted="false">我想了解%s项目的加入详情和方案</string>
    <string name="join_count" formatted="false">加入店数:%s</string>
    <string name="join_count_normal">加入店数:</string>
    <string name="direct_count" formatted="false">直营店数:%s</string>
    <string name="direct_count_normal">直营店数:</string>
    <string name="join_feedback_type1">品牌信息有误</string>
    <string name="join_feedback_type2">品牌不存在</string>
    <string name="join_feedback_type3">存在欺诈骗钱行为</string>
    <string name="join_feedback_type4">存在侵权行为</string>
    <string name="red_shop_food_type">分类</string>
    <string name="red_shop_hot">热门品牌</string>
    <string name="seach_all">全部</string>
    <string name="seach_button_sure">确定</string>
    <string name="seach_button_exit">重置</string>
    <string name="seach_money">投资金额</string>
    <string name="seach_join_type">招商模式</string>
    <string name="seach_shop_count">门店数：</string>
    <string name="seach_visit_count">浏览量：</string>
    <string name="seach_food_type">餐饮类型</string>
    <string name="seach_add_area">招商区域</string>
    <string name="seach_ranking">综合排序</string>
    <string name="seach_hint">搜索感兴趣的品牌</string>
    <string name="seach_nothing">嗨呀~没有找到相关内容 o(╥﹏╥)o</string>
    <string name="head_detail">详情</string>
    <string name="please_input_user_name">请输入4~12位用户名</string>
    <string name="please_input_user_name_or_phone_num">请输入手机号码/用户名</string>
    <string name="please_input_phone_num">请输入手机号码</string>
    <string name="please_read_accept">请同意用户协议</string>
    <string name="please_input_password">请输入6–12位数字或英文密码</string>
    <string name="please_input_password1">请输入密码</string>
    <string name="use_sms_verify_login">使用短信验证登录</string>
    <string name="use_name_login">使用账号密码登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="sign_up_now">立即注册</string>
    <string name="get_code">获取验证码</string>
    <string name="sms_verify_login">短信验证登录</string>
    <string name="use_name_password_login">账号密码登录</string>
    <string name="input_code">请输入验证码</string>
    <string name="enter_password">请设置密码</string>
    <string name="enter_new_password">请输入新密码</string>
    <string name="confirm_password">请确认密码</string>
    <string name="confirm_new_password">请确认新密码</string>
    <string name="user_name_empty">用户名不能为空</string>
    <string name="psw_hint">请输入6–12位密码</string>
    <string name="psw_inconsistent">两次密码不一致！</string>
    <string name="phone_empty">手机号不能为空</string>
    <string name="password_empty">密码不能为空</string>
    <string name="login_success">登录成功</string>
    <string name="phone_not_registered">手机号没有注册</string>
    <string name="login_fail_recover_password">温馨提示”密码错误次数过多，是否找回密码！</string>
    <string name="login_fail_company">该账号为企业账号，请前往网页版登录</string>
    <string name="scuuess_code">请输入正确格式的验证码</string>
    <string name="picture_neirong">请输入图片中的内容</string>
    <string name="read_accept">我已经认真阅读并接受</string>
    <string name="user_agreement">《盟盟用户协议》</string>
    <string name="privacy_agreement">《隐私声明》</string>
    <string name="user_agreement1">用户协议</string>
    <string name="privacy_protocol">隐私声明</string>
    <string name="user_agreement_yes">我已阅读并同意盟盟用户协议</string>
    <string name="user_agreement_no">您拒绝接受协议</string>
    <string name="refresh">刷新</string>
    <string name="register">注册</string>
    <string name="bind_phone">绑定手机</string>
    <string name="cancel_login">登录取消</string>
    <string name="login_error">登录错误</string>
    <string name="please_click">请再次点击</string>
    <string name="phone_not_register">该手机号尚未注册</string>
    <string name="get_message_code">请输入4位验证码</string>
    <string name="my_defaultNum">--</string>
    <string name="exitApp_tips">确定要退出账号吗？</string>
    <string name="clearCache_tips">确定要清除缓存吗？</string>
    <string name="clearCache_defaultSize">0.00KB</string>
    <string name="my_myFollow">我的关注</string>
    <string name="my_myFollow_cancel">取消关注</string>
    <string name="my_myFollow_null_tips">暂 无 关 注 哦</string>
    <string name="my_myFollow_cancel_fail">取消失败</string>
    <string name="my_myFollow_delete_fail">删除失败</string>
    <string name="my_myFollow_cateringType">餐饮类型：</string>
    <string name="my_myFollow_investmentAmount">￥</string>
    <string name="my_myLeavingMessage">我的留言</string>
    <string name="my_myLeavingMessage_null_tips">暂 无 留 言 哦</string>
    <string name="my_message_null_tips">暂 无 消 息 哦</string>
    <string name="my_message_notification_null_tips">暂 无 通 知 哦</string>
    <string name="my_myLeavingMessage_reply">已回复</string>
    <string name="my_myLeavingMessage_noReply">待回复</string>
    <string name="my_myLeavingMessage_StoreNum">门店数：</string>
    <string name="my_myFootprint">我的足迹</string>
    <string name="my_myFootprint_null_tips">暂 无 足 迹 哦</string>
    <string name="my_enterpriseEntry">企业入驻</string>
    <string name="my_threeBinding">第三方绑定</string>
    <string name="my_username">我的盟盟</string>
    <string name="my_settings_setPassword">设置密码</string>
    <string name="my_settings_updatePassword">修改密码</string>
    <string name="my_settings_updatePhone">换绑手机</string>
    <string name="my_settings_clearCache">清理缓存</string>
    <string name="my_settings_aboutUs">关于我们</string>
    <string name="my_settings_exitUser">退出账号</string>
    <string name="my_settings_user_title">个人资料</string>
    <string name="my_settings_user_no_tips">点击空白处重试</string>
    <string name="my_settings_user_head">头像</string>
    <string name="my_settings_user_name">真实姓名</string>
    <string name="my_settings_user_telephone">固定电话</string>
    <string name="my_settings_user_city">所在城市</string>
    <string name="my_settings_user_money">创业资本</string>
    <string name="my_settings_user_interestIndustry">感兴趣行业</string>
    <string name="my_settings_user_select_yes">已选择</string>
    <string name="my_settings_user_select_no">未选择</string>
    <string name="my_settings_user_name_tips">请输入真实姓名</string>
    <string name="my_settings_user_money_tips">请选择创业资本</string>
    <string name="my_settings_user_interestIndustry_tips">请选择感兴趣行业</string>
    <string name="my_settings_user_telephone_tips">固定电话格式输入不正确</string>
    <string name="my_settings_user_wechat_tips">微信格式不对，请输入6至20位字母或数字</string>
    <string name="my_settings_user_qq_tips">qq格式不对，请输入6至11位数字</string>
    <string name="my_settings_user_email_tips">邮箱格式输入不正确</string>
    <string name="my_settings_setOrUpdate_tips">必须是6–12位数字、英文字母（区分大小写），也可以是两者的组合。</string>
    <string name="my_settings_updatePhone_msgTips">请输入新手机号中的验证码</string>
    <string name="my_settings_aboutUs_companyName">上海轻盟信息科技有限公司</string>
    <string name="my_settings_aboutUs_version">版本号：</string>
    <string name="my_settings_aboutUs_website">http://www.717mm.com</string>
    <string name="my_settings_aboutUs_tips">通过本软件参加的任何商业活动均与Apple Inc.无关</string>
    <string name="my_threeBinding_yes">已绑定</string>
    <string name="my_threeBinding_not">未绑定</string>
    <string name="my_threeBinding_untying">解绑</string>
    <string name="my_threeBinding_qqTips">解除绑定后，你将不能通过QQ进行第三方登录</string>
    <string name="my_threeBinding_wechatTips">解除绑定后，你将不能通过微信进行第三方登录</string>
    <string name="title_activity_head_datails">Head_datails</string>
    <string name="title_activity_head_details">HeadDetailsActivity</string>
    <string name="pleaseSelect">请选择</string>
    <string name="popCitySelect_province">选择省份/地区</string>
    <string name="popCitySelect_city">选择城市</string>
    <string name="popCitySelect_area">选择区/县</string>
    <string name="popCitySelect_twoTips">请选择城市</string>
    <string name="popCitySelect_threeTips">请选择县</string>
</resources>