<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@color/white"
                android:paddingStart="@dimen/padding_dp_10"
                android:paddingEnd="@dimen/padding_dp_10"
                android:paddingBottom="@dimen/padding_dp_10">

    <TextView
        android:id="@+id/join_money_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/padding_dp_20"
        android:paddingBottom="@dimen/padding_dp_25"
        android:text="@string/join_money"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_size_18"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/join_money_compete"
        android:layout_below="@+id/join_money_title"
        android:paddingBottom="@dimen/padding_dp_10"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qingmeng.mengmeng.view.widget.MyItemView
                android:id="@+id/money_total"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:my_item_content="100W"
                app:my_item_title="@string/join_money"/>

            <com.qingmeng.mengmeng.view.widget.MyItemView
                android:id="@+id/money_join"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_dp_20"
                app:my_item_content="100W"
                app:my_item_title="@string/join_money_total"/>

            <com.qingmeng.mengmeng.view.widget.MyItemView
                android:id="@+id/money_ensure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_dp_20"
                app:my_item_content="100W"
                app:my_item_title="@string/join_money_ensure"/>

            <com.qingmeng.mengmeng.view.widget.MyItemView
                android:id="@+id/money_equipment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_dp_20"
                app:my_item_content="100W"
                app:my_item_title="@string/join_money_equipment"/>

            <com.qingmeng.mengmeng.view.widget.MyItemView
                android:id="@+id/money_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_dp_20"
                app:my_item_content="100W"
                app:my_item_title="@string/join_money_other"/>

        </LinearLayout>

    </ScrollView>

    <TextView
        android:id="@+id/join_money_compete"
        android:layout_width="320dp"
        android:layout_height="@dimen/padding_dp_35"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_dialog_detail"
        android:gravity="center"
        android:text="@string/complete"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_17"/>
</RelativeLayout>