<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include layout="@layout/layout_head"/>

    <EditText
        android:id="@+id/mRegisterUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_dp_60"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/please_input_user_name"
        android:maxLength="11"
        android:textColor="@color/color_333333"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_16"/>

    <include layout="@layout/layout_line_no_padding"/>

    <EditText
        android:id="@+id/mRegisterPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_dp_60"
        android:background="@null"
        android:gravity="center_vertical"
        android:hint="@string/please_input_phone_num"
        android:inputType="phone"
        android:maxLength="11"
        android:textColor="@color/color_333333"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_16"/>

    <include layout="@layout/layout_line_no_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_dp_60">

        <EditText
            android:id="@+id/mRegisterCode"
            style="@style/DefaultTextContent"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/input_code"
            android:inputType="number"
            android:maxLength="12"
            android:singleLine="true"
            android:textCursorDrawable="@drawable/color_cursor"/>

        <TextView
            android:id="@+id/mRegisterGetCode"
            style="@style/DefaultHint"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/padding_dp_10"
            android:paddingRight="@dimen/padding_dp_10"
            android:text="@string/getMsg"
            android:textSize="@dimen/text_size_16"/>

    </LinearLayout>

    <include layout="@layout/layout_line_no_padding"/>

    <EditText
        android:id="@+id/mRegisterPsw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_dp_60"
        android:background="@null"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawablePadding="@dimen/padding_dp_5"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="@color/color_333333"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_16"/>

    <include layout="@layout/layout_line_no_padding"/>

    <EditText
        android:id="@+id/mRegisterConfirmPsw"
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_dp_60"
        android:background="@null"
        android:digits="0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ"
        android:drawablePadding="@dimen/padding_dp_5"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:maxLength="12"
        android:singleLine="true"
        android:textColor="@color/color_333333"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_16"/>
</LinearLayout>