<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="105dp"
              android:layout_height="122dp"
              android:background="@drawable/color_white_radius_2"
              android:orientation="vertical"
              android:paddingStart="@dimen/padding_dp_5"
              android:paddingTop="@dimen/padding_dp_5">

    <TextView
        android:id="@+id/popMoreMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/detail_icon_message"
        android:drawablePadding="@dimen/padding_dp_10"
        android:padding="@dimen/padding_dp_5"
        android:text="@string/message"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:id="@+id/popMoreHomepage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/detail_icon_home_page"
        android:drawablePadding="@dimen/padding_dp_9"
        android:padding="@dimen/padding_dp_5"
        android:text="@string/homepage"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:id="@+id/popMoreFeedback"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/detail_icon_feedback"
        android:drawablePadding="@dimen/padding_dp_10"
        android:paddingStart="@dimen/padding_dp_7"
        android:paddingTop="@dimen/padding_dp_5"
        android:paddingEnd="@dimen/padding_dp_5"
        android:paddingBottom="@dimen/padding_dp_5"
        android:text="@string/feedback"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/text_size_14"/>

    <TextView
        android:id="@+id/popMoreShare"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/detail_icon_share"
        android:drawablePadding="@dimen/padding_dp_12"
        android:padding="@dimen/padding_dp_5"
        android:text="@string/share"
        android:textColor="@color/color_666666"
        android:textSize="@dimen/text_size_14"/>

</LinearLayout>