<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:padding="@dimen/padding_dp_10"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:background="@drawable/ripple_bg_drawable_white_radius15"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/albumSelect"
            android:textSize="16sp"/>

        <include layout="@layout/layout_line_no_padding"/>

        <TextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/photograph"
            android:textSize="16sp"/>

    </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/ripple_bg_white_radius15"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/cancel"
            android:textSize="16sp"/>

</LinearLayout>