<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="105dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/share_wechat"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_wechat"
                android:gravity="center"
                android:text="@string/wechat"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_18"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_moments"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_moments"
                android:gravity="center"
                android:text="@string/wechat_friends"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_18"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_qq"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_qq"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_18"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/share_sina"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_share_sina"
                android:gravity="center"
                android:text="@string/sina"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/text_size_18"/>

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/padding_dp_2"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/share_cancel"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/page_background_f5"
        android:gravity="center"
        android:text="@string/cancel"
        android:textColor="@color/color_333333"
        android:textSize="@dimen/text_size_18"/>
</LinearLayout>