<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="288dp"
              android:layout_height="wrap_content"
              android:layout_gravity="center_horizontal"
              android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_dp_18"
        android:gravity="center"
        android:text="@string/picture_neirong"
        android:textColor="@color/color_646464"
        android:textSize="17sp"/>

    <LinearLayout
        android:id="@+id/dialog_image_layout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/padding_dp_39"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_dp_13"
        android:layout_marginBottom="@dimen/padding_dp_12"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/dialog_image_image"
            android:layout_width="78dp"
            android:layout_height="39dp"
            android:scaleType="fitXY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/padding_dp_15"
            android:drawableLeft="@drawable/login_icon_refresh"
            android:drawablePadding="@dimen/padding_dp_5"
            android:text="@string/refresh"
            android:textColor="@color/color_666666"/>

    </LinearLayout>


    <EditText
        android:id="@+id/dialog_image_edtext"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginLeft="@dimen/padding_dp_19"
        android:layout_marginRight="@dimen/padding_dp_19"
        android:layout_marginBottom="@dimen/padding_dp_14"
        android:background="@drawable/bg_5_f5f5f5"
        android:gravity="center_vertical"
        android:hint="@string/get_message_code"
        android:maxLength="4"
        android:paddingLeft="@dimen/padding_dp_9"
        android:paddingRight="@dimen/padding_dp_9"
        android:singleLine="true"
        android:textColor="@color/color_909090"
        android:textColorHint="@color/color_909090"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textSize="@dimen/text_size_14"/>


    <include layout="@layout/layout_line_no_padding"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/dialog_image_cancel"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/color_646464"
            android:textSize="17sp"/>

        <View

            android:layout_width="@dimen/padding_dp_1"
            android:layout_height="match_parent"
            android:background="@color/color_dddddd"/>

        <TextView
            android:id="@+id/dialog_image_confirm"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sure"
            android:textColor="@color/main_theme"
            android:textSize="17sp"/>
    </LinearLayout>

</LinearLayout>