<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/update_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_update_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="110dp"
            android:text="@string/new_version_update"
            android:textColor="@color/color_5ab1e1"
            android:textSize="@dimen/text_size_16"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_dp_25"
            android:layout_marginTop="@dimen/padding_dp_10"
            android:text="@string/update_content"
            android:textColor="@color/color_333333"
            android:textSize="@dimen/text_size_15"/>

        <TextView
            android:id="@+id/updateContent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_dp_25"
            android:layout_marginTop="@dimen/padding_dp_3"
            android:text="@string/content_update"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/text_size_14"/>

    </LinearLayout>

    <TextView
        android:id="@+id/updateImmediately"
        android:layout_width="159dp"
        android:layout_height="@dimen/padding_dp_30"
        android:layout_alignBottom="@+id/update_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/padding_dp_20"
        android:background="@drawable/color_5ab1e1_radius_15"
        android:gravity="center"
        android:text="@string/update_immediately"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/updateClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/update_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/padding_dp_20"
        android:background="@drawable/dialog_update_close"/>

    <com.qingmeng.mengmeng.view.WaveProgressView
        android:id="@+id/waveProgress"
        android:layout_width="@dimen/padding_dp_50"
        android:layout_height="@dimen/padding_dp_50"
        android:visibility="gone"
        android:layout_centerInParent="true"/>

</RelativeLayout>